hphp/hack/test/typecheck/tconst/cannot_assign_tparam1.php.exp
File "cannot_assign_tparam1.php", line 4, characters 19-19:
A type constant can only use type parameters declared in its own type parameter list (NastCheck[3027])
File "cannot_assign_tparam1.php", line 3, characters 9-9:
T was declared as a type parameter here
