hphp/hack/test/typecheck/tconst/cannot_assign_tparam1.php
<?hh

class A<T> {
  const type Ta = T;
}
